regen colab notebooks

--- a/docs/colab_notebooks/6-editing-images-with-image-context.ipynb
+++ b/docs/colab_notebooks/6-editing-images-with-image-context.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c7129daf",
+   "id": "40e16af1",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Image-to-Image Editing\n",
     "\n",
     "#### 📚 What you'll learn\n",
     "\n",
-    "This notebook shows how to edit existing images by combining a seed dataset with image generation. You'll load animal portrait photographs from HuggingFace, feed them as context to an autoregressive model, and generate fun edited versions with accessories like sunglasses, top hats, and bow ties.\n",
+    "This notebook shows how to chain image generation columns: first generate animal portraits from text, then edit those generated images by adding accessories and changing styles—all without loading external datasets.\n",
     "\n",
-    "- 🌱 **Seed datasets with images**: Load a HuggingFace image dataset and use it as a seed\n",
-    "- 🖼️ **Image context for editing**: Pass existing images to an image-generation model via `multi_modal_context`\n",
-    "- 🎲 **Sampler-driven diversity**: Combine sampled accessories and settings with seed images for varied results\n",
-    "- 💾 **Preview vs create**: Preview stores base64 in the dataframe; create saves images to disk\n",
+    "- 🖼️ **Text-to-image generation**: Generate images from text prompts\n",
+    "- 🔗 **Chaining image columns**: Use `ImageContext` to pass generated images to a follow-up editing column\n",
+    "- 🎲 **Sampler-driven diversity**: Combine sampled accessories and settings for varied edits\n",
     "\n",
-    "This tutorial uses an **autoregressive** model (one that supports both image input *and* image output via the chat completions API). Diffusion models (DALL·E, Stable Diffusion, etc.) do not support image context—see [Tutorial 5](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/5-generating-images/) for text-to-image generation with diffusion models.\n",
+    "This tutorial uses an **autoregressive** model (one that supports both text-to-image *and* image-to-image generation via the chat completions API). Diffusion models (DALL·E, Stable Diffusion, etc.) do not support image context—see [Tutorial 5](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/5-generating-images/) for text-to-image generation with diffusion models.\n",
     "\n",
     "> **Prerequisites**: This tutorial uses [OpenRouter](https://openrouter.ai) with the Flux 2 Pro model. Set `OPENROUTER_API_KEY` in your environment before running.\n",
     "\n",
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a438ee3",
+   "id": "846d9aad",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a022157",
+   "id": "738842c8",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -47,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "752fe3eb",
+   "id": "c0f03293",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49266cc2",
+   "id": "a65be55d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,16 +75,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87dfa0b",
+   "id": "f8970dcf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import base64\n",
-    "import io\n",
-    "import uuid\n",
+    "from pathlib import Path\n",
     "\n",
-    "import pandas as pd\n",
-    "from datasets import load_dataset\n",
     "from IPython.display import Image as IPImage\n",
     "from IPython.display import display\n",
     "\n",
@@ -95,18 +91,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c99ff426",
+   "id": "ad9c7aec",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
     "\n",
-    "We initialize Data Designer without arguments here—the image-editing model is configured explicitly in the next cell. No default text model is needed for this tutorial.\n"
+    "We initialize Data Designer without arguments here—the image model is configured explicitly in the next cell.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9be6231b",
+   "id": "ac6f7185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,12 +111,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e242b51",
+   "id": "64c18e7a",
    "metadata": {},
    "source": [
-    "### 🎛️ Define an image-editing model\n",
+    "### 🎛️ Define an image model\n",
     "\n",
-    "We need an **autoregressive** model that supports both image input and image output via the chat completions API. This lets us pass existing images as context and receive edited images back.\n",
+    "We need an **autoregressive** model that supports both text-to-image and image-to-image generation via the chat completions API. This lets us generate images from text and then pass those images as context for editing.\n",
     "\n",
     "- Use `ImageInferenceParams` so Data Designer treats this model as an image generator.\n",
     "- Image-specific options are model-dependent; pass them via `extra_body`.\n",
@@ -131,13 +127,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34dd8eed",
+   "id": "52c88de0",
    "metadata": {},
    "outputs": [],
    "source": [
     "MODEL_PROVIDER = \"openrouter\"\n",
     "MODEL_ID = \"black-forest-labs/flux.2-pro\"\n",
-    "MODEL_ALIAS = \"image-editor\"\n",
+    "MODEL_ALIAS = \"image-model\"\n",
     "\n",
     "model_configs = [\n",
     "    dd.ModelConfig(\n",
@@ -153,96 +149,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98abe1a9",
-   "metadata": {},
-   "source": [
-    "### 🌱 Load animal portraits from HuggingFace\n",
-    "\n",
-    "We'll load animal face photographs from the [AFHQ](https://huggingface.co/datasets/huggan/AFHQv2) (Animal Faces-HQ) dataset, convert them to base64, and use them as a seed dataset.\n",
-    "\n",
-    "AFHQ contains high-quality 512×512 close-up portraits of cats, dogs, and wildlife—perfect subjects for adding fun accessories.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "233f483b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SEED_COUNT = 10\n",
-    "BASE64_IMAGE_HEIGHT = 512\n",
-    "\n",
-    "ANIMAL_LABELS = {0: \"cat\", 1: \"dog\", 2: \"wild\"}\n",
-    "\n",
-    "\n",
-    "def resize_image(image, height: int):\n",
-    "    \"\"\"Resize image maintaining aspect ratio.\"\"\"\n",
-    "    original_width, original_height = image.size\n",
-    "    width = int(original_width * (height / original_height))\n",
-    "    return image.resize((width, height))\n",
-    "\n",
-    "\n",
-    "def prepare_record(record: dict, height: int) -> dict:\n",
-    "    \"\"\"Convert a HuggingFace record to base64 with metadata.\"\"\"\n",
-    "    image = resize_image(record[\"image\"], height)\n",
-    "    img_buffer = io.BytesIO()\n",
-    "    image.save(img_buffer, format=\"PNG\")\n",
-    "    base64_string = base64.b64encode(img_buffer.getvalue()).decode(\"utf-8\")\n",
-    "    return {\n",
-    "        \"uuid\": str(uuid.uuid4()),\n",
-    "        \"base64_image\": base64_string,\n",
-    "        \"animal\": ANIMAL_LABELS[record[\"label\"]],\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b1a7b59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"📥 Streaming animal portraits from HuggingFace...\")\n",
-    "hf_dataset = load_dataset(\"huggan/AFHQv2\", split=\"train\", streaming=True)\n",
-    "\n",
-    "hf_iter = iter(hf_dataset)\n",
-    "records = [prepare_record(next(hf_iter), BASE64_IMAGE_HEIGHT) for _ in range(SEED_COUNT)]\n",
-    "df_seed = pd.DataFrame(records)\n",
-    "\n",
-    "print(f\"✅ Prepared {len(df_seed)} animal portraits with columns: {list(df_seed.columns)}\")\n",
-    "df_seed.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2956a5a6",
+   "id": "b4883011",
    "metadata": {},
    "source": [
     "### 🏗️ Build the configuration\n",
     "\n",
-    "We combine three ingredients:\n",
+    "We chain two image generation columns:\n",
     "\n",
-    "1. **Seed dataset** — original animal portraits as base64 and their species labels\n",
-    "2. **Sampler columns** — randomly sample accessories and settings for each image\n",
-    "3. **Image column with context** — generate an edited image using the original as reference\n",
-    "\n",
-    "The `multi_modal_context` parameter on `ImageColumnConfig` tells Data Designer to pass the seed image to the model alongside the text prompt. The model receives both the image and the editing instructions, and generates a new image.\n"
+    "1. **Sampler columns** — randomly sample animal types, accessories, settings, and art styles\n",
+    "2. **First image column** — generate an animal portrait from a text prompt\n",
+    "3. **Second image column with context** — edit the generated portrait using `ImageContext`\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f79ffa72",
+   "id": "0b54bf99",
    "metadata": {},
    "outputs": [],
    "source": [
     "config_builder = dd.DataDesignerConfigBuilder(model_configs=model_configs)\n",
     "\n",
-    "# 1. Seed the original animal portraits\n",
-    "config_builder.with_seed_dataset(dd.DataFrameSeedSource(df=df_seed))\n",
+    "# 1. Sampler columns for diversity\n",
+    "config_builder.add_column(\n",
+    "    dd.SamplerColumnConfig(\n",
+    "        name=\"animal\",\n",
+    "        sampler_type=dd.SamplerType.CATEGORY,\n",
+    "        params=dd.CategorySamplerParams(\n",
+    "            values=[\"cat\", \"dog\", \"fox\", \"owl\", \"rabbit\", \"panda\"],\n",
+    "        ),\n",
+    "    )\n",
+    ")\n",
     "\n",
-    "# 2. Add sampler columns for accessory diversity\n",
     "config_builder.add_column(\n",
     "    dd.SamplerColumnConfig(\n",
     "        name=\"accessory\",\n",
@@ -294,10 +232,19 @@
     "    )\n",
     ")\n",
     "\n",
-    "# 3. Image column that reads the seed image as context and generates an edited version\n",
+    "# 2. Generate animal portrait from text\n",
     "config_builder.add_column(\n",
     "    dd.ImageColumnConfig(\n",
-    "        name=\"edited_image\",\n",
+    "        name=\"animal_portrait\",\n",
+    "        prompt=\"A close-up portrait photograph of a {{ animal }} looking at the camera, studio lighting, high quality.\",\n",
+    "        model_alias=MODEL_ALIAS,\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# 3. Edit the generated portrait\n",
+    "config_builder.add_column(\n",
+    "    dd.ImageColumnConfig(\n",
+    "        name=\"edited_portrait\",\n",
     "        prompt=(\n",
     "            \"Edit this {{ animal }} portrait photo. \"\n",
     "            \"Add {{ accessory }} on the animal. \"\n",
@@ -306,13 +253,7 @@
     "            \"Keep the animal's face, expression, and features faithful to the original photo.\"\n",
     "        ),\n",
     "        model_alias=MODEL_ALIAS,\n",
-    "        multi_modal_context=[\n",
-    "            dd.ImageContext(\n",
-    "                column_name=\"base64_image\",\n",
-    "                data_type=dd.ModalityDataType.BASE64,\n",
-    "                image_format=dd.ImageFormat.PNG,\n",
-    "            )\n",
-    "        ],\n",
+    "        multi_modal_context=[dd.ImageContext(column_name=\"animal_portrait\")],\n",
     "    )\n",
     ")\n",
     "\n",
@@ -321,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cba69c0",
+   "id": "85516cec",
    "metadata": {},
    "source": [
     "### 🔁 Preview: quick iteration\n",
@@ -332,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec669ae2",
+   "id": "4e922030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41ac4a95",
+   "id": "534c5d07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f041d9d",
+   "id": "6ff24137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,56 +303,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "483fa24a",
+   "id": "9c9ab4f9",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "source": [
     "### 🔎 Compare original vs edited\n",
     "\n",
-    "Let's display the original animal portraits next to their accessorized versions.\n"
+    "Let's display the generated animal portraits next to their edited versions.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd4d7dff",
+   "id": "90a28381",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def display_before_after(row: pd.Series, index: int, base_path=None) -> None:\n",
-    "    \"\"\"Display original vs edited image for a single record.\n",
+    "def display_image(image_value, base_path: Path | None = None) -> None:\n",
+    "    \"\"\"Display an image from base64 (preview mode) or file path (create mode).\"\"\"\n",
+    "    values = image_value if isinstance(image_value, list) else [image_value]\n",
+    "    for value in values:\n",
+    "        if base_path is not None:\n",
+    "            display(IPImage(filename=str(base_path / value)))\n",
+    "        else:\n",
+    "            display(IPImage(data=base64.b64decode(value)))\n",
     "\n",
-    "    When base_path is None (preview mode), edited_image is decoded from base64.\n",
-    "    When base_path is provided (create mode), edited_image is loaded from disk.\n",
-    "    \"\"\"\n",
+    "\n",
+    "def display_before_after(row, index: int, base_path: Path | None = None) -> None:\n",
+    "    \"\"\"Display original portrait vs edited version for a single record.\"\"\"\n",
     "    print(f\"\\n{'=' * 60}\")\n",
     "    print(f\"Record {index}: {row['animal']} wearing {row['accessory']}\")\n",
-    "    print(f\"Setting: {row['setting']}\")\n",
-    "    print(f\"Style: {row['art_style']}\")\n",
+    "    print(f\"Setting: {row['setting']}, Style: {row['art_style']}\")\n",
     "    print(f\"{'=' * 60}\")\n",
     "\n",
-    "    print(\"\\n📷 Original portrait:\")\n",
-    "    display(IPImage(data=base64.b64decode(row[\"base64_image\"])))\n",
+    "    print(\"\\n📷 Generated portrait:\")\n",
+    "    display_image(row[\"animal_portrait\"], base_path)\n",
     "\n",
     "    print(\"\\n🎨 Edited version:\")\n",
-    "    edited = row.get(\"edited_image\")\n",
-    "    if edited is None:\n",
-    "        return\n",
-    "    if base_path is None:\n",
-    "        images = edited if isinstance(edited, list) else [edited]\n",
-    "        for img_b64 in images:\n",
-    "            display(IPImage(data=base64.b64decode(img_b64)))\n",
-    "    else:\n",
-    "        paths = edited if not isinstance(edited, str) else [edited]\n",
-    "        for path in paths:\n",
-    "            display(IPImage(filename=str(base_path / path)))"
+    "    display_image(row[\"edited_portrait\"], base_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af08dc6c",
+   "id": "7dd69086",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,18 +357,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ee15c83",
+   "id": "e5089b88",
    "metadata": {},
    "source": [
     "### 🆙 Create at scale\n",
     "\n",
-    "In **create** mode, images are saved to disk in an `images/<column_name>/` folder with UUID filenames. The dataframe stores relative paths.\n"
+    "In **create** mode, images are saved to disk in `images/<column_name>/` folders with UUID filenames. The dataframe stores relative paths. `ImageContext` auto-detection handles this transparently—generated file paths are resolved to base64 before being sent to the model for editing.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f0d27f8",
+   "id": "fd91d3de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc17414a",
+   "id": "aecf8f86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "849c03b6",
+   "id": "895767fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,14 +399,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7385f02",
+   "id": "ebe53fc8",
    "metadata": {},
    "source": [
     "## ⏭️ Next steps\n",
     "\n",
-    "- Experiment with different autoregressive models for image editing\n",
+    "- Experiment with different autoregressive models for image generation and editing\n",
     "- Try more creative editing prompts (style transfer, background replacement, artistic filters)\n",
-    "- Combine image editing with text generation (e.g., generate captions for edited images using an LLM-Text column)\n",
+    "- Combine image generation with text generation (e.g., generate captions using an LLM-Text column with `ImageContext`)\n",
+    "- Chain more than two image columns for multi-step editing pipelines\n",
     "\n",
     "Related tutorials:\n",
     "\n",
