--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "911877e5",
+   "id": "187ae39b",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6756afd",
+   "id": "affdec51",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d73b25ce",
+   "id": "fb2ab96c",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f05ece3e",
+   "id": "64661d08",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d84f4489",
+   "id": "52dd1f6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e4cc2d4",
+   "id": "73031da5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e4e8d45",
+   "id": "2bf90705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cdd2a8a",
+   "id": "2c2acaba",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bb0ca16",
+   "id": "37c9aeac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd17820d",
+   "id": "be82bbc3",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "301f2bd2",
+   "id": "8a5f3290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad04f82a",
+   "id": "21b9d39a",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac8e2885",
+   "id": "9a83d258",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b8aafc0",
+   "id": "253e3ebd",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "432edd4a",
+   "id": "e907709a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4f94627",
+   "id": "1cdbec46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b697311",
+   "id": "c398fa28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcfc97e8",
+   "id": "9af5294d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a3bdc13",
+   "id": "0b629ce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9665355",
+   "id": "e438dc74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,13 +320,7 @@
     "            \"Start from the top of the image and then describe it from top to bottom. \"\n",
     "            \"Place a summary at the bottom.\"\n",
     "        ),\n",
-    "        multi_modal_context=[\n",
-    "            dd.ImageContext(\n",
-    "                column_name=\"base64_image\",\n",
-    "                data_type=dd.ModalityDataType.BASE64,\n",
-    "                image_format=dd.ImageFormat.PNG,\n",
-    "            )\n",
-    "        ],\n",
+    "        multi_modal_context=[dd.ImageContext(column_name=\"base64_image\")],\n",
     "    )\n",
     ")\n",
     "\n",
@@ -335,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d900aaa",
+   "id": "870969be",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -352,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51a80346",
+   "id": "218b773b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea217964",
+   "id": "bf4a040c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be0e4ef0",
+   "id": "2d3e0129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c75f531",
+   "id": "6c3d748f",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -396,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcbf86d1",
+   "id": "210d10b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ab35029",
+   "id": "52a54996",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -417,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03314ae9",
+   "id": "c8182b42",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76a3e3b",
+   "id": "3252607d",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -454,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d16566c0",
+   "id": "9e08d6af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e7796ba",
+   "id": "614e167b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14bc1042",
+   "id": "e8672292",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e676330",
+   "id": "252d95b4",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
