fix: handle pyarrow list types in notebook 6 display_image
When image columns are loaded from parquet with pyarrow backend,
list values are pyarrow ListScalars, not Python lists. The
isinstance(x, list) check fails, causing the whole ListScalar to be
treated as a single path string (producing filenames ending in
`png')]`). Use isinstance(x, str) instead to correctly handle any
iterable type.

--- a/docs/colab_notebooks/6-editing-images-with-image-context.ipynb
+++ b/docs/colab_notebooks/6-editing-images-with-image-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a10399da",
+   "id": "2d2762d1",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Image-to-Image Editing\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a974ace",
+   "id": "a309bf02",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "715904bd",
+   "id": "430426e8",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cadedac7",
+   "id": "36ee78b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79ef1bf3",
+   "id": "a6f82e3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40235d59",
+   "id": "1872971f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea0069f9",
+   "id": "09b35f27",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47a4e44a",
+   "id": "27ee0096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47fcac8a",
+   "id": "66c4ed2e",
    "metadata": {},
    "source": [
     "### 🎛️ Define an image model\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27ff0288",
+   "id": "28a0452c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ce30fed",
+   "id": "0d256954",
    "metadata": {},
    "source": [
     "### 🏗️ Build the configuration\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfb04fae",
+   "id": "8a13bfe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "650bb017",
+   "id": "8a34b36a",
    "metadata": {},
    "source": [
     "### 🔁 Preview: quick iteration\n",
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29258f43",
+   "id": "925e96ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb4b521a",
+   "id": "f426f7ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08665bd5",
+   "id": "b7f0c4ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b59de2c",
+   "id": "3cc58f1c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -316,13 +316,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "386059f6",
+   "id": "df5b4e34",
    "metadata": {},
    "outputs": [],
    "source": [
     "def display_image(image_value, base_path: Path | None = None) -> None:\n",
     "    \"\"\"Display an image from base64 (preview mode) or file path (create mode).\"\"\"\n",
-    "    values = image_value if isinstance(image_value, list) else [image_value]\n",
+    "    values = [image_value] if isinstance(image_value, str) else list(image_value)\n",
     "    for value in values:\n",
     "        if base_path is not None:\n",
     "            display(IPImage(filename=str(base_path / value)))\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4a16cbc",
+   "id": "3264e0fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf4f143d",
+   "id": "f25a7dd6",
    "metadata": {},
    "source": [
     "### 🆙 Create at scale\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d573e54a",
+   "id": "caa90c05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "906ea6fe",
+   "id": "0e216b83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06f1df5a",
+   "id": "c84882e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "368aeaed",
+   "id": "e38250a3",
    "metadata": {},
    "source": [
     "## ⏭️ Next steps\n",
