fix: repair notebook CI (dead model, missing API key, pyarrow type bug) (#348)
* fix: repair notebook CI by replacing dead vision model and adding missing API key

- Replace `meta/llama-4-scout-17b-16e-instruct` (no longer serving on
  build.nvidia.com) with `nvidia/nemotron-nano-12b-v2-vl` (project default)
  in tutorial notebook 4
- Add `OPENROUTER_API_KEY` to the `build-notebooks` workflow so notebooks
  5 and 6 (which use OpenRouter for image generation) can authenticate
- Regenerate colab notebooks to reflect the model change

* fix: handle pyarrow list types in notebook 6 display_image

When image columns are loaded from parquet with pyarrow backend,
list values are pyarrow ListScalars, not Python lists. The
isinstance(x, list) check fails, causing the whole ListScalar to be
treated as a single path string (producing filenames ending in
`png')]`). Use isinstance(x, str) instead to correctly handle any
iterable type.

--- a/docs/colab_notebooks/6-editing-images-with-image-context.ipynb
+++ b/docs/colab_notebooks/6-editing-images-with-image-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40e16af1",
+   "id": "2d2762d1",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Image-to-Image Editing\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "846d9aad",
+   "id": "a309bf02",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "738842c8",
+   "id": "430426e8",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0f03293",
+   "id": "36ee78b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a65be55d",
+   "id": "a6f82e3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8970dcf",
+   "id": "1872971f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9c7aec",
+   "id": "09b35f27",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac6f7185",
+   "id": "27ee0096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64c18e7a",
+   "id": "66c4ed2e",
    "metadata": {},
    "source": [
     "### 🎛️ Define an image model\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c88de0",
+   "id": "28a0452c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4883011",
+   "id": "0d256954",
    "metadata": {},
    "source": [
     "### 🏗️ Build the configuration\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b54bf99",
+   "id": "8a13bfe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85516cec",
+   "id": "8a34b36a",
    "metadata": {},
    "source": [
     "### 🔁 Preview: quick iteration\n",
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e922030",
+   "id": "925e96ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "534c5d07",
+   "id": "f426f7ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ff24137",
+   "id": "b7f0c4ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9ab4f9",
+   "id": "3cc58f1c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -316,13 +316,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a28381",
+   "id": "df5b4e34",
    "metadata": {},
    "outputs": [],
    "source": [
     "def display_image(image_value, base_path: Path | None = None) -> None:\n",
     "    \"\"\"Display an image from base64 (preview mode) or file path (create mode).\"\"\"\n",
-    "    values = image_value if isinstance(image_value, list) else [image_value]\n",
+    "    values = [image_value] if isinstance(image_value, str) else list(image_value)\n",
     "    for value in values:\n",
     "        if base_path is not None:\n",
     "            display(IPImage(filename=str(base_path / value)))\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dd69086",
+   "id": "3264e0fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5089b88",
+   "id": "f25a7dd6",
    "metadata": {},
    "source": [
     "### 🆙 Create at scale\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd91d3de",
+   "id": "caa90c05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aecf8f86",
+   "id": "0e216b83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "895767fd",
+   "id": "c84882e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe53fc8",
+   "id": "e38250a3",
    "metadata": {},
    "source": [
     "## ⏭️ Next steps\n",
